# loongcollector

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Makefile  README.md  go.mod  go.sum  plugins.yml
.claude/: README.md
.cursor/: README.md
.cursor/examples/: mcp.json.example
.cursor/rules/: README
.cursor/skills/: README
.devcontainer/: Dockerfile  Dockerfile.lldb  devcontainer.json  dind-install.sh  start-dind.sh
.github/: copilot-instructions.md
.github/workflows/: auto-release.yaml  benchmark.yaml  build-core-ut.yaml  build-core-windows.yaml  build-core.yaml  build-linux.yaml  build-pure-plugin.yaml  build-windows.yaml  build.yaml  check-compatibility.yaml  ci.yaml  claude.yaml  code-review.yaml  copilot-review.yml  docs-cn-check.yaml  e2e-framework.yaml  e2e.yaml  publish-create-branch.yaml  publish-release.yaml  release-edge.yaml  static-check.yaml
.skill/: README.md
.skill/rules/: README
.skill/skills/: README
benchmark/: README.md
changes/: v3.2.6.md  v3.3.2.md  v3.3.5.md
config_server/: README.md
config_server/service/: Dockerfile
core/: CMakeLists.txt  dependencies.cmake  links.cmake  logtail.cpp  logtail_windows.cpp  options.cmake
core/apm/: AgentOperationRunner.cpp  AgentOperationRunner.h  ApmInjectRunner.cpp  ApmInjectRunner.h  AttachManager.cpp  AttachManager.h  HookManager.cpp  HookManager.h  PackageManager.cpp  PackageManager.h  Types.cpp  Types.h
core/app_config/: AppConfig.cpp  AppConfig.h
core/application/: Application.cpp  Application.h
core/checkpoint/: AdhocCheckpointManager.cpp  CheckPointManager.cpp  CheckPointManager.h
core/collection_pipeline/: CollectionPipeline.cpp  CollectionPipeline.h  CollectionPipelineContext.h  CollectionPipelineManager.cpp  CollectionPipelineManager.h  GlobalConfig.cpp  GlobalConfig.h
core/common/: ArchiveHelper.cpp  ArchiveHelper.h  CapabilityUtil.cpp  CapabilityUtil.h  CircularBuffer.h  CmsIdUtil.cpp  CmsIdUtil.h  CrashBackTraceUtil.cpp  CrashBackTraceUtil.h  DynamicStringFormatter.cpp  DynamicStringFormatter.h  EcsMetaData.cpp  (+33 more)
core/ebpf/driver/: BPFMapTraits.h  BPFWrapper.h  CMakeLists.txt  CallName.h  CpuProfiler.cpp  CpuProfiler.h  EbpfDriver.cpp  FileFilter.cpp  FileFilter.h  IdAllocator.h  Log.cpp  Log.h  NetworkFilter.cpp  NetworkFilter.h  NetworkObserver.cpp  NetworkObserver.h  Standalone.cpp  eBPFDriver.cpp  eBPFDriver.h  eBPFManager.h  eBPFOperations.cpp  eBPFOperations.h  eBPFWrapper.cpp  eBPFWrapper.h
core/unittest/apm/: ApmInjectConfigUnittest.cpp  ApmInjectRunnerUnittest.cpp  AttachManagerUnittest.cpp  CMakeLists.txt  PackageManagerUnittest.cpp
core/unittest/ebpf/: AgentsightEventsUnittest.cpp  AgentsightManagerUnittest.cpp  AgentsightMessageUtilUnittest.cpp  AggregatorUnittest.cpp  BPFWrapperUnittest.cpp  CMakeLists.txt  CommonUtilUnittest.cpp  ConnTrackerManagerUnittest.cpp  ConnTrackerUnittest.cpp  ConnectionManagerUnittest.cpp  ConnectionUnittest.cpp  ConsumerUnittest.cpp  ConvergerUnittest.cpp  CpuProfilingManagerUnittest.cpp  EBPFServerUnittest.cpp  FileRetryableEventUnittest.cpp  FileSecurityManagerConfigPairUnittest.cpp  FileSecurityManagerUnittest.cpp  IdAllocatorUnittest.cpp  ManagerConfigPairTestFramework.h  ManagerUnittest.cpp  ManagerUnittestBase.h  MockEBPFAdapter.h  NetworkObserverConfigUpdateUnittest.cpp  NetworkObserverEventUnittest.cpp  NetworkObserverManagerConfigPairUnittest.cpp  NetworkObserverManagerUnittest.cpp  NetworkObserverUnittest.cpp  NetworkSecurityManagerConfigPairUnittest.cpp  NetworkSecurityManagerUnittest.cpp  ProcFsStub.h  ProcessCacheManagerUnittest.cpp  ProcessCacheManagerWrapper.h  ProcessCacheUnittest.cpp  ProcessCacheValueUnittest.cpp  ProcessCleanupRetryableEventUnittest.cpp  ProcessCloneRetryableEventUnittest.cpp  ProcessDataMapUnittest.cpp  ProcessDiscoveryManagerUnittest.cpp  ProcessExecveRetryableEventUnittest.cpp  (+14 more)
core/unittest/journal_server/: CMakeLists.txt  InputJournalUnittest.cpp  JournalConfigUnittest.cpp  JournalConnectionManagerUnittest.cpp  JournalConnectionUnittest.cpp  JournalEntryProcessorUnittest.cpp  JournalFilterUnittest.cpp  JournalMonitorUnittest.cpp  JournalReaderUnittest.cpp  JournalServerUnittest.cpp  JournalUtilsUnittest.cpp
docker/: Dockerfile_build  Dockerfile_build_with_kerberos  Dockerfile_coverage  Dockerfile_development_part  Dockerfile_e2e  Dockerfile_edge_linux  Dockerfile_goc  Dockerfile_production  Dockerfile_production_minimal  Dockerfile_release
example_config/: README.md
k8s_templates/: README.md  ilogtail-daemonset-stdout-to-kafka.yaml  ilogtail-sidecar-file-to-kafka.yaml
licenses/: LICENSE_OF_ILOGTAIL_DEPENDENCIES.md  LICENSE_OF_TESTENGINE_DEPENDENCIES.md
pkg/: context.go  go.sum
plugin_main/: plugin_export.go  plugin_export_selfmonitor_test.go  plugin_http.go  plugin_main.go  plugin_main_test.go
pluginmanager/: checkpoint_manager.go  checkpoint_manager_test.go  config_update_test.go  container_config_manager.go  container_config_manager_test.go  containers_api.go  containers_api_test.go  context_imp.go  file_config.go  file_config_test.go  internal_alarm_export.go  logstore_config.go  logstore_config_test.go  logtail_port_manager.go  logtail_port_manager_test.go  metric_export.go  plugin_manager.go  plugin_manager_test.go  plugin_pipeline_removed_test.go  plugin_runner_helper.go  plugin_runner_v1.go  plugin_runner_v2.go  plugin_runner_v2_test.go  plugin_wrapper_aggregator_v1.go  plugin_wrapper_aggregator_v2.go  plugin_wrapper_service_v1.go  processor_tag.go  processor_tag_commuinty.go  processor_tag_enterprise.go  processor_tag_helper.go  processor_tag_test.go  self_telemetry_alarm.go  self_telemetry_container_config.go
scripts/: analyze_build_time.sh  build_edge_linux.sh  check_cpu_instruction.sh  check_docs_cn_relative_links.py  check_glibc.sh  dist.sh  docker_build.sh  e2e.sh  gen_build_scripts.sh  gen_release_markdown.sh  plugin_build.sh  run_core_ut.sh  upload_release_assets.sh  validate_docs_cn_plugin_samples.py  windows64_build.bat  windows64_build_github_actions.bat  windows64_run_core_ut.bat
test/: go.mod  go.sum
(+1815 files in other folders)
